--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
+    <nav class="navbar test">
       <div class="logo">JOSI</div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
