--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </section>
     <section id="projects">
-        <h2>My Projects</h2>
+        <h2 id="project-h2" >My Projects</h2>
         <div class="projects-container">
             <div class="project">
                 <img src="image/j.jpg" alt="Fashion Store Project">
@@ -55,7 +55,7 @@
                 <a href="pro.html" target="_blank">View Project</a>
             </div>
         </div><br><br><br><br><br>
-        <div style=" padding-left: 20px;">
+        <div class="about" style=" padding-left: 20px;">
         <h1>About Me</h1>
         <P>
           I am a dedicated front-end developer with a passion for creating intuitive and visually appealing web experiences. <br>
@@ -63,11 +63,11 @@
           functional websites that engage users and deliver seamless performance across all devices.</P><br>
         </div>
     </section>
-<br><br><br><br>
+ 
     <section id="contact">
-        <h2>Contact Me</h2><br><br><br>
-        <p>Email: yosefhabtamu99@gmail.com</p><br><br><br>
-        <p>Telegram; @josii16</p><br><br><br>
+        <h2>Contact Me</h2>
+        <p>Email: yosefhabtamu99@gmail.com</p> 
+        <p>Telegram; @josii16</p> 
     </section>
 
     <footer>
