--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                 <img src="image/j.jpg" alt="Fashion Store Project">
                 <h3>Fashion Store Website</h3>
                 <p>A responsive online  fashion store for you.  Built using HTML,CSS and JavaScript</p>
-                <a href="josi.html" target="_blank">View Project</a>
+                <a href="https://josii16.github.io/josi-store/" target="_blank">View Project</a>
             </div>
             <div class="project">
                 <img src="image/top.jpg" alt="Trading Center Portfolio">
                 <h3>Portfolio for a Trading Center</h3>
                 <p>A portfolio showcasing the services and projects of a trading center. Built using HTML,CSS and JavaScript</p>
-                <a href="top.html" >View Project</a>
+                <a href="#" >View Project</a>
             </div>
             <div class="project">
                 <img src="image/pro.jpg" alt="Pomodoro Timer">
                 <h3>Pomodoro Timer Web Application</h3>
                 <p>A productivity timer  Built using HTML,CSS and JavaScript to manage work and break sessions effectively.</p>
-                <a href="pro.html" target="_blank">View Project</a>
+                <a href="https://josii16.github.io/Pomodoro/" target="_blank">View Project</a>
             </div>
         </div><br><br><br><br><br>
         <div class="about" style=" padding-left: 20px;">
@@ -65,12 +65,33 @@
     </section>
  
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: yosefhabtamu99@gmail.com</p> 
-        <p>Telegram; @josii16</p> 
+        <h2 style="text-align: center;">Contact Me</h2>
+        
     </section>
 
-    <footer>
+
+    <div class="contact-container">
+      <form action="submit_form.php">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Your email..">
+
+          <label for="subject">Subject</label>
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+          <input type="submit" value="Submit">
+      </form>
+  </div><br><br>
+  <div style="margin-left: 30px;">
+  <p>Email: yosefhabtamu99@gmail.com</p>
+  <br> 
+  <p>Telegram; @josii16</p> </div><br><br>
+    <footer style="margin-left: 50px;">
         <p>&copy; 2024 YOSEF H. All Rights Reserved.</p>
     </footer>
 </body>
